fixed link to shaack.com

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ $inputLoop.on("input", function(event) {
     </script>
 
     <div class="card my-5 border-info">
-        <a href="https://shaack.com/en/open-source-components">
+        <a href="https://shaack.com/works">
             <div class="card-body">
                 <h4 class="mb-2 mt-0">More Bootstrap components (from shaack.com)</h4>
                 You may want to check out our further Bootstrap extensions,
