--- a/es5-deprecated/test/index.html
+++ b/es5-deprecated/test/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script src="../src/bootstrap-input-spinner.js"></script>
 <script type="module">
-    import {teevi} from "../node_modules/teevi/src/teevi.js"
+    import {teevi} from "../../node_modules/teevi/src/teevi.js"
     import "./Test.js"
     teevi.run()
 </script>
